6º Semestre/Compiladores/actividade7/parser.output
Terminals which are not used

   STRUCT
   BREAK


Grammar

    0 $accept: program $end

    1 program: /* empty */
    2        | decls

    3 decls: decl
    4      | decl decls

    5 decl: ids COLON type SEMI
    6     | ids COLON type ASSIGN exp SEMI
    7     | ID LPAR RPAR COLON type LCBRACE stms RCBRACE SEMI
    8     | ID LPAR argdefs RPAR COLON type LCBRACE stms RCBRACE SEMI
    9     | DEFINE ID type SEMI

   10 argdef: ID COLON type

   11 argdefs: argdef
   12        | argdef COMMA argdefs

   13 args: exp
   14     | exp COMMA args

   15 ids: ID
   16    | ID COMMA ids

   17 stms: stm
   18     | stm stms

   19 stm: decl
   20    | exp SEMI
   21    | RETURN exp SEMI
   22    | IF exp THEN LCBRACE stms RCBRACE SEMI
   23    | IF exp THEN LCBRACE stms RCBRACE ELSE LCBRACE stms RCBRACE SEMI
   24    | WHILE exp DO LCBRACE stms RCBRACE ELSE LCBRACE stms RCBRACE SEMI
   25    | NEXT

   26 type: T_INT
   27     | T_FLOAT
   28     | T_STRING
   29     | T_BOOL
   30     | T_VOID
   31     | ID
   32     | type LSBRACE INTLIT RSBRACE

   33 lit: INTLIT
   34    | FLOATLIT
   35    | STRLIT
   36    | BOOLLIT

   37 exp: lit
   38    | ID
   39    | exp LSBRACE INTLIT RSBRACE
   40    | exp ADD exp
   41    | exp SUB exp
   42    | exp MUL exp
   43    | exp DIV exp
   44    | exp POW exp
   45    | exp MOD exp
   46    | exp GT exp
   47    | exp LT exp
   48    | exp GEQ exp
   49    | exp LEQ exp
   50    | exp NEQ exp
   51    | exp EQ exp
   52    | exp AND exp
   53    | exp OR exp
   54    | NOT exp
   55    | SUB exp
   56    | LPAR exp RPAR
   57    | ID LPAR RPAR
   58    | ID LPAR args RPAR
   59    | exp ASSIGN exp


Terminals, with rules where they appear

$end (0) 0
error (256)
INTLIT (258) 32 33 39
BOOLLIT (259) 36
FLOATLIT (260) 34
STRLIT (261) 35
ID (262) 7 8 9 10 15 16 31 38 57 58
T_INT (263) 26
T_FLOAT (264) 27
T_STRING (265) 28
T_BOOL (266) 29
T_VOID (267) 30
COLON (268) 5 6 7 8 10
DEFINE (269) 9
RETURN (270) 21
STRUCT (271)
WHILE (272) 24
DO (273) 24
NEXT (274) 25
BREAK (275)
IF (276) 22 23
THEN (277) 22 23
ELSE (278) 23 24
SEMI (279) 5 6 7 8 9 20 21 22 23 24
ASSIGN (280) 6 59
COMMA (281) 12 14 16
OR (282) 53
AND (283) 52
NOT (284) 54
ADD (285) 40
SUB (286) 41 55
MOD (287) 45
DIV (288) 43
MUL (289) 42
POW (290) 44
NEG (291)
LEQ (292) 49
LT (293) 47
GEQ (294) 48
GT (295) 46
NEQ (296) 50
EQ (297) 51
RCBRACE (298) 7 8 22 23 24
LCBRACE (299) 7 8 22 23 24
RSBRACE (300) 32 39
LSBRACE (301) 32 39
RPAR (302) 7 8 56 57 58
LPAR (303) 7 8 56 57 58


Nonterminals, with rules where they appear

$accept (49)
    on left: 0
program (50)
    on left: 1 2, on right: 0
decls (51)
    on left: 3 4, on right: 2 4
decl (52)
    on left: 5 6 7 8 9, on right: 3 4 19
argdef (53)
    on left: 10, on right: 11 12
argdefs (54)
    on left: 11 12, on right: 8 12
args (55)
    on left: 13 14, on right: 14 58
ids (56)
    on left: 15 16, on right: 5 6 16
stms (57)
    on left: 17 18, on right: 7 8 18 22 23 24
stm (58)
    on left: 19 20 21 22 23 24 25, on right: 17 18
type (59)
    on left: 26 27 28 29 30 31 32, on right: 5 6 7 8 9 10 32
lit (60)
    on left: 33 34 35 36, on right: 37
exp (61)
    on left: 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54
    55 56 57 58 59, on right: 6 13 14 20 21 22 23 24 39 40 41 42 43
    44 45 46 47 48 49 50 51 52 53 54 55 56 59


state 0

    0 $accept: . program $end
    1 program: .  [$end]
    2        | . decls
    3 decls: . decl
    4      | . decl decls
    5 decl: . ids COLON type SEMI
    6     | . ids COLON type ASSIGN exp SEMI
    7     | . ID LPAR RPAR COLON type LCBRACE stms RCBRACE SEMI
    8     | . ID LPAR argdefs RPAR COLON type LCBRACE stms RCBRACE SEMI
    9     | . DEFINE ID type SEMI
   15 ids: . ID
   16    | . ID COMMA ids

    ID      shift, and go to state 1
    DEFINE  shift, and go to state 2

    $default  reduce using rule 1 (program)

    program  go to state 3
    decls    go to state 4
    decl     go to state 5
    ids      go to state 6


state 1

    7 decl: ID . LPAR RPAR COLON type LCBRACE stms RCBRACE SEMI
    8     | ID . LPAR argdefs RPAR COLON type LCBRACE stms RCBRACE SEMI
   15 ids: ID .  [COLON]
   16    | ID . COMMA ids

    COMMA  shift, and go to state 7
    LPAR   shift, and go to state 8

    $default  reduce using rule 15 (ids)


state 2

    9 decl: DEFINE . ID type SEMI

    ID  shift, and go to state 9


state 3

    0 $accept: program . $end

    $end  shift, and go to state 10


state 4

    2 program: decls .

    $default  reduce using rule 2 (program)


state 5

    3 decls: . decl  [$end]
    3      | decl .  [$end]
    4      | . decl decls
    4      | decl . decls
    5 decl: . ids COLON type SEMI
    6     | . ids COLON type ASSIGN exp SEMI
    7     | . ID LPAR RPAR COLON type LCBRACE stms RCBRACE SEMI
    8     | . ID LPAR argdefs RPAR COLON type LCBRACE stms RCBRACE SEMI
    9     | . DEFINE ID type SEMI
   15 ids: . ID
   16    | . ID COMMA ids

    ID      shift, and go to state 1
    DEFINE  shift, and go to state 2

    $default  reduce using rule 3 (decls)

    decls  go to state 11
    decl   go to state 5
    ids    go to state 6


state 6

    5 decl: ids . COLON type SEMI
    6     | ids . COLON type ASSIGN exp SEMI

    COLON  shift, and go to state 12


state 7

   15 ids: . ID
   16    | . ID COMMA ids
   16    | ID COMMA . ids

    ID  shift, and go to state 13

    ids  go to state 14


state 8

    7 decl: ID LPAR . RPAR COLON type LCBRACE stms RCBRACE SEMI
    8     | ID LPAR . argdefs RPAR COLON type LCBRACE stms RCBRACE SEMI
   10 argdef: . ID COLON type
   11 argdefs: . argdef
   12        | . argdef COMMA argdefs

    ID    shift, and go to state 15
    RPAR  shift, and go to state 16

    argdef   go to state 17
    argdefs  go to state 18


state 9

    9 decl: DEFINE ID . type SEMI
   26 type: . T_INT
   27     | . T_FLOAT
   28     | . T_STRING
   29     | . T_BOOL
   30     | . T_VOID
   31     | . ID
   32     | . type LSBRACE INTLIT RSBRACE

    ID        shift, and go to state 19
    T_INT     shift, and go to state 20
    T_FLOAT   shift, and go to state 21
    T_STRING  shift, and go to state 22
    T_BOOL    shift, and go to state 23
    T_VOID    shift, and go to state 24

    type  go to state 25


state 10

    0 $accept: program $end .

    $default  accept


state 11

    4 decls: decl decls .

    $default  reduce using rule 4 (decls)


state 12

    5 decl: ids COLON . type SEMI
    6     | ids COLON . type ASSIGN exp SEMI
   26 type: . T_INT
   27     | . T_FLOAT
   28     | . T_STRING
   29     | . T_BOOL
   30     | . T_VOID
   31     | . ID
   32     | . type LSBRACE INTLIT RSBRACE

    ID        shift, and go to state 19
    T_INT     shift, and go to state 20
    T_FLOAT   shift, and go to state 21
    T_STRING  shift, and go to state 22
    T_BOOL    shift, and go to state 23
    T_VOID    shift, and go to state 24

    type  go to state 26


state 13

   15 ids: ID .  [COLON]
   16    | ID . COMMA ids

    COMMA  shift, and go to state 7

    $default  reduce using rule 15 (ids)


state 14

   16 ids: ID COMMA ids .

    $default  reduce using rule 16 (ids)


state 15

   10 argdef: ID . COLON type

    COLON  shift, and go to state 27


state 16

    7 decl: ID LPAR RPAR . COLON type LCBRACE stms RCBRACE SEMI

    COLON  shift, and go to state 28


state 17

   11 argdefs: argdef .  [RPAR]
   12        | argdef . COMMA argdefs

    COMMA  shift, and go to state 29

    $default  reduce using rule 11 (argdefs)


state 18

    8 decl: ID LPAR argdefs . RPAR COLON type LCBRACE stms RCBRACE SEMI

    RPAR  shift, and go to state 30


state 19

   31 type: ID .

    $default  reduce using rule 31 (type)


state 20

   26 type: T_INT .

    $default  reduce using rule 26 (type)


state 21

   27 type: T_FLOAT .

    $default  reduce using rule 27 (type)


state 22

   28 type: T_STRING .

    $default  reduce using rule 28 (type)


state 23

   29 type: T_BOOL .

    $default  reduce using rule 29 (type)


state 24

   30 type: T_VOID .

    $default  reduce using rule 30 (type)


state 25

    9 decl: DEFINE ID type . SEMI
   32 type: type . LSBRACE INTLIT RSBRACE

    SEMI     shift, and go to state 31
    LSBRACE  shift, and go to state 32


state 26

    5 decl: ids COLON type . SEMI
    6     | ids COLON type . ASSIGN exp SEMI
   32 type: type . LSBRACE INTLIT RSBRACE

    SEMI     shift, and go to state 33
    ASSIGN   shift, and go to state 34
    LSBRACE  shift, and go to state 32


state 27

   10 argdef: ID COLON . type
   26 type: . T_INT
   27     | . T_FLOAT
   28     | . T_STRING
   29     | . T_BOOL
   30     | . T_VOID
   31     | . ID
   32     | . type LSBRACE INTLIT RSBRACE

    ID        shift, and go to state 19
    T_INT     shift, and go to state 20
    T_FLOAT   shift, and go to state 21
    T_STRING  shift, and go to state 22
    T_BOOL    shift, and go to state 23
    T_VOID    shift, and go to state 24

    type  go to state 35


state 28

    7 decl: ID LPAR RPAR COLON . type LCBRACE stms RCBRACE SEMI
   26 type: . T_INT
   27     | . T_FLOAT
   28     | . T_STRING
   29     | . T_BOOL
   30     | . T_VOID
   31     | . ID
   32     | . type LSBRACE INTLIT RSBRACE

    ID        shift, and go to state 19
    T_INT     shift, and go to state 20
    T_FLOAT   shift, and go to state 21
    T_STRING  shift, and go to state 22
    T_BOOL    shift, and go to state 23
    T_VOID    shift, and go to state 24

    type  go to state 36


state 29

   10 argdef: . ID COLON type
   11 argdefs: . argdef
   12        | . argdef COMMA argdefs
   12        | argdef COMMA . argdefs

    ID  shift, and go to state 15

    argdef   go to state 17
    argdefs  go to state 37


state 30

    8 decl: ID LPAR argdefs RPAR . COLON type LCBRACE stms RCBRACE SEMI

    COLON  shift, and go to state 38


state 31

    9 decl: DEFINE ID type SEMI .

    $default  reduce using rule 9 (decl)


state 32

   32 type: type LSBRACE . INTLIT RSBRACE

    INTLIT  shift, and go to state 39


state 33

    5 decl: ids COLON type SEMI .

    $default  reduce using rule 5 (decl)


state 34

    6 decl: ids COLON type ASSIGN . exp SEMI
   33 lit: . INTLIT
   34    | . FLOATLIT
   35    | . STRLIT
   36    | . BOOLLIT
   37 exp: . lit
   38    | . ID
   39    | . exp LSBRACE INTLIT RSBRACE
   40    | . exp ADD exp
   41    | . exp SUB exp
   42    | . exp MUL exp
   43    | . exp DIV exp
   44    | . exp POW exp
   45    | . exp MOD exp
   46    | . exp GT exp
   47    | . exp LT exp
   48    | . exp GEQ exp
   49    | . exp LEQ exp
   50    | . exp NEQ exp
   51    | . exp EQ exp
   52    | . exp AND exp
   53    | . exp OR exp
   54    | . NOT exp
   55    | . SUB exp
   56    | . LPAR exp RPAR
   57    | . ID LPAR RPAR
   58    | . ID LPAR args RPAR
   59    | . exp ASSIGN exp

    INTLIT    shift, and go to state 40
    BOOLLIT   shift, and go to state 41
    FLOATLIT  shift, and go to state 42
    STRLIT    shift, and go to state 43
    ID        shift, and go to state 44
    NOT       shift, and go to state 45
    SUB       shift, and go to state 46
    LPAR      shift, and go to state 47

    lit  go to state 48
    exp  go to state 49


state 35

   10 argdef: ID COLON type .  [COMMA, RPAR]
   32 type: type . LSBRACE INTLIT RSBRACE

    LSBRACE  shift, and go to state 32

    $default  reduce using rule 10 (argdef)


state 36

    7 decl: ID LPAR RPAR COLON type . LCBRACE stms RCBRACE SEMI
   32 type: type . LSBRACE INTLIT RSBRACE

    LCBRACE  shift, and go to state 50
    LSBRACE  shift, and go to state 32


state 37

   12 argdefs: argdef COMMA argdefs .

    $default  reduce using rule 12 (argdefs)


state 38

    8 decl: ID LPAR argdefs RPAR COLON . type LCBRACE stms RCBRACE SEMI
   26 type: . T_INT
   27     | . T_FLOAT
   28     | . T_STRING
   29     | . T_BOOL
   30     | . T_VOID
   31     | . ID
   32     | . type LSBRACE INTLIT RSBRACE

    ID        shift, and go to state 19
    T_INT     shift, and go to state 20
    T_FLOAT   shift, and go to state 21
    T_STRING  shift, and go to state 22
    T_BOOL    shift, and go to state 23
    T_VOID    shift, and go to state 24

    type  go to state 51


state 39

   32 type: type LSBRACE INTLIT . RSBRACE

    RSBRACE  shift, and go to state 52


state 40

   33 lit: INTLIT .

    $default  reduce using rule 33 (lit)


state 41

   36 lit: BOOLLIT .

    $default  reduce using rule 36 (lit)


state 42

   34 lit: FLOATLIT .

    $default  reduce using rule 34 (lit)


state 43

   35 lit: STRLIT .

    $default  reduce using rule 35 (lit)


state 44

   38 exp: ID .  [DO, THEN, SEMI, ASSIGN, COMMA, OR, AND, ADD, SUB, MOD, DIV, MUL, POW, LEQ, LT, GEQ, GT, NEQ, EQ, LSBRACE, RPAR]
   57    | ID . LPAR RPAR
   58    | ID . LPAR args RPAR

    LPAR  shift, and go to state 53

    $default  reduce using rule 38 (exp)


state 45

   33 lit: . INTLIT
   34    | . FLOATLIT
   35    | . STRLIT
   36    | . BOOLLIT
   37 exp: . lit
   38    | . ID
   39    | . exp LSBRACE INTLIT RSBRACE
   40    | . exp ADD exp
   41    | . exp SUB exp
   42    | . exp MUL exp
   43    | . exp DIV exp
   44    | . exp POW exp
   45    | . exp MOD exp
   46    | . exp GT exp
   47    | . exp LT exp
   48    | . exp GEQ exp
   49    | . exp LEQ exp
   50    | . exp NEQ exp
   51    | . exp EQ exp
   52    | . exp AND exp
   53    | . exp OR exp
   54    | . NOT exp
   54    | NOT . exp
   55    | . SUB exp
   56    | . LPAR exp RPAR
   57    | . ID LPAR RPAR
   58    | . ID LPAR args RPAR
   59    | . exp ASSIGN exp

    INTLIT    shift, and go to state 40
    BOOLLIT   shift, and go to state 41
    FLOATLIT  shift, and go to state 42
    STRLIT    shift, and go to state 43
    ID        shift, and go to state 44
    NOT       shift, and go to state 45
    SUB       shift, and go to state 46
    LPAR      shift, and go to state 47

    lit  go to state 48
    exp  go to state 54


state 46

   33 lit: . INTLIT
   34    | . FLOATLIT
   35    | . STRLIT
   36    | . BOOLLIT
   37 exp: . lit
   38    | . ID
   39    | . exp LSBRACE INTLIT RSBRACE
   40    | . exp ADD exp
   41    | . exp SUB exp
   42    | . exp MUL exp
   43    | . exp DIV exp
   44    | . exp POW exp
   45    | . exp MOD exp
   46    | . exp GT exp
   47    | . exp LT exp
   48    | . exp GEQ exp
   49    | . exp LEQ exp
   50    | . exp NEQ exp
   51    | . exp EQ exp
   52    | . exp AND exp
   53    | . exp OR exp
   54    | . NOT exp
   55    | . SUB exp
   55    | SUB . exp
   56    | . LPAR exp RPAR
   57    | . ID LPAR RPAR
   58    | . ID LPAR args RPAR
   59    | . exp ASSIGN exp

    INTLIT    shift, and go to state 40
    BOOLLIT   shift, and go to state 41
    FLOATLIT  shift, and go to state 42
    STRLIT    shift, and go to state 43
    ID        shift, and go to state 44
    NOT       shift, and go to state 45
    SUB       shift, and go to state 46
    LPAR      shift, and go to state 47

    lit  go to state 48
    exp  go to state 55


state 47

   33 lit: . INTLIT
   34    | . FLOATLIT
   35    | . STRLIT
   36    | . BOOLLIT
   37 exp: . lit
   38    | . ID
   39    | . exp LSBRACE INTLIT RSBRACE
   40    | . exp ADD exp
   41    | . exp SUB exp
   42    | . exp MUL exp
   43    | . exp DIV exp
   44    | . exp POW exp
   45    | . exp MOD exp
   46    | . exp GT exp
   47    | . exp LT exp
   48    | . exp GEQ exp
   49    | . exp LEQ exp
   50    | . exp NEQ exp
   51    | . exp EQ exp
   52    | . exp AND exp
   53    | . exp OR exp
   54    | . NOT exp
   55    | . SUB exp
   56    | . LPAR exp RPAR
   56    | LPAR . exp RPAR
   57    | . ID LPAR RPAR
   58    | . ID LPAR args RPAR
   59    | . exp ASSIGN exp

    INTLIT    shift, and go to state 40
    BOOLLIT   shift, and go to state 41
    FLOATLIT  shift, and go to state 42
    STRLIT    shift, and go to state 43
    ID        shift, and go to state 44
    NOT       shift, and go to state 45
    SUB       shift, and go to state 46
    LPAR      shift, and go to state 47

    lit  go to state 48
    exp  go to state 56


state 48

   37 exp: lit .

    $default  reduce using rule 37 (exp)


state 49

    6 decl: ids COLON type ASSIGN exp . SEMI
   39 exp: exp . LSBRACE INTLIT RSBRACE
   40    | exp . ADD exp
   41    | exp . SUB exp
   42    | exp . MUL exp
   43    | exp . DIV exp
   44    | exp . POW exp
   45    | exp . MOD exp
   46    | exp . GT exp
   47    | exp . LT exp
   48    | exp . GEQ exp
   49    | exp . LEQ exp
   50    | exp . NEQ exp
   51    | exp . EQ exp
   52    | exp . AND exp
   53    | exp . OR exp
   59    | exp . ASSIGN exp

    SEMI     shift, and go to state 57
    ASSIGN   shift, and go to state 58
    OR       shift, and go to state 59
    AND      shift, and go to state 60
    ADD      shift, and go to state 61
    SUB      shift, and go to state 62
    MOD      shift, and go to state 63
    DIV      shift, and go to state 64
    MUL      shift, and go to state 65
    POW      shift, and go to state 66
    LEQ      shift, and go to state 67
    LT       shift, and go to state 68
    GEQ      shift, and go to state 69
    GT       shift, and go to state 70
    NEQ      shift, and go to state 71
    EQ       shift, and go to state 72
    LSBRACE  shift, and go to state 73


state 50

    5 decl: . ids COLON type SEMI
    6     | . ids COLON type ASSIGN exp SEMI
    7     | . ID LPAR RPAR COLON type LCBRACE stms RCBRACE SEMI
    7     | ID LPAR RPAR COLON type LCBRACE . stms RCBRACE SEMI
    8     | . ID LPAR argdefs RPAR COLON type LCBRACE stms RCBRACE SEMI
    9     | . DEFINE ID type SEMI
   15 ids: . ID
   16    | . ID COMMA ids
   17 stms: . stm
   18     | . stm stms
   19 stm: . decl
   20    | . exp SEMI
   21    | . RETURN exp SEMI
   22    | . IF exp THEN LCBRACE stms RCBRACE SEMI
   23    | . IF exp THEN LCBRACE stms RCBRACE ELSE LCBRACE stms RCBRACE SEMI
   24    | . WHILE exp DO LCBRACE stms RCBRACE ELSE LCBRACE stms RCBRACE SEMI
   25    | . NEXT
   33 lit: . INTLIT
   34    | . FLOATLIT
   35    | . STRLIT
   36    | . BOOLLIT
   37 exp: . lit
   38    | . ID
   39    | . exp LSBRACE INTLIT RSBRACE
   40    | . exp ADD exp
   41    | . exp SUB exp
   42    | . exp MUL exp
   43    | . exp DIV exp
   44    | . exp POW exp
   45    | . exp MOD exp
   46    | . exp GT exp
   47    | . exp LT exp
   48    | . exp GEQ exp
   49    | . exp LEQ exp
   50    | . exp NEQ exp
   51    | . exp EQ exp
   52    | . exp AND exp
   53    | . exp OR exp
   54    | . NOT exp
   55    | . SUB exp
   56    | . LPAR exp RPAR
   57    | . ID LPAR RPAR
   58    | . ID LPAR args RPAR
   59    | . exp ASSIGN exp

    INTLIT    shift, and go to state 40
    BOOLLIT   shift, and go to state 41
    FLOATLIT  shift, and go to state 42
    STRLIT    shift, and go to state 43
    ID        shift, and go to state 74
    DEFINE    shift, and go to state 2
    RETURN    shift, and go to state 75
    WHILE     shift, and go to state 76
    NEXT      shift, and go to state 77
    IF        shift, and go to state 78
    NOT       shift, and go to state 45
    SUB       shift, and go to state 46
    LPAR      shift, and go to state 47

    decl  go to state 79
    ids   go to state 6
    stms  go to state 80
    stm   go to state 81
    lit   go to state 48
    exp   go to state 82


state 51

    8 decl: ID LPAR argdefs RPAR COLON type . LCBRACE stms RCBRACE SEMI
   32 type: type . LSBRACE INTLIT RSBRACE

    LCBRACE  shift, and go to state 83
    LSBRACE  shift, and go to state 32


state 52

   32 type: type LSBRACE INTLIT RSBRACE .

    $default  reduce using rule 32 (type)


state 53

   13 args: . exp
   14     | . exp COMMA args
   33 lit: . INTLIT
   34    | . FLOATLIT
   35    | . STRLIT
   36    | . BOOLLIT
   37 exp: . lit
   38    | . ID
   39    | . exp LSBRACE INTLIT RSBRACE
   40    | . exp ADD exp
   41    | . exp SUB exp
   42    | . exp MUL exp
   43    | . exp DIV exp
   44    | . exp POW exp
   45    | . exp MOD exp
   46    | . exp GT exp
   47    | . exp LT exp
   48    | . exp GEQ exp
   49    | . exp LEQ exp
   50    | . exp NEQ exp
   51    | . exp EQ exp
   52    | . exp AND exp
   53    | . exp OR exp
   54    | . NOT exp
   55    | . SUB exp
   56    | . LPAR exp RPAR
   57    | . ID LPAR RPAR
   57    | ID LPAR . RPAR
   58    | . ID LPAR args RPAR
   58    | ID LPAR . args RPAR
   59    | . exp ASSIGN exp

    INTLIT    shift, and go to state 40
    BOOLLIT   shift, and go to state 41
    FLOATLIT  shift, and go to state 42
    STRLIT    shift, and go to state 43
    ID        shift, and go to state 44
    NOT       shift, and go to state 45
    SUB       shift, and go to state 46
    RPAR      shift, and go to state 84
    LPAR      shift, and go to state 47

    args  go to state 85
    lit   go to state 48
    exp   go to state 86


state 54

   39 exp: exp . LSBRACE INTLIT RSBRACE
   40    | exp . ADD exp
   41    | exp . SUB exp
   42    | exp . MUL exp
   43    | exp . DIV exp
   44    | exp . POW exp
   45    | exp . MOD exp
   46    | exp . GT exp
   47    | exp . LT exp
   48    | exp . GEQ exp
   49    | exp . LEQ exp
   50    | exp . NEQ exp
   51    | exp . EQ exp
   52    | exp . AND exp
   53    | exp . OR exp
   54    | NOT exp .  [DO, THEN, SEMI, ASSIGN, COMMA, OR, AND, RPAR]
   59    | exp . ASSIGN exp

    ADD      shift, and go to state 61
    SUB      shift, and go to state 62
    MOD      shift, and go to state 63
    DIV      shift, and go to state 64
    MUL      shift, and go to state 65
    POW      shift, and go to state 66
    LEQ      shift, and go to state 67
    LT       shift, and go to state 68
    GEQ      shift, and go to state 69
    GT       shift, and go to state 70
    NEQ      shift, and go to state 71
    EQ       shift, and go to state 72
    LSBRACE  shift, and go to state 73

    $default  reduce using rule 54 (exp)

    Conflict between rule 54 and token ASSIGN resolved as reduce (ASSIGN < NOT).
    Conflict between rule 54 and token OR resolved as reduce (OR < NOT).
    Conflict between rule 54 and token AND resolved as reduce (AND < NOT).
    Conflict between rule 54 and token ADD resolved as shift (NOT < ADD).
    Conflict between rule 54 and token SUB resolved as shift (NOT < SUB).
    Conflict between rule 54 and token MOD resolved as shift (NOT < MOD).
    Conflict between rule 54 and token DIV resolved as shift (NOT < DIV).
    Conflict between rule 54 and token MUL resolved as shift (NOT < MUL).
    Conflict between rule 54 and token POW resolved as shift (NOT < POW).
    Conflict between rule 54 and token LEQ resolved as shift (NOT < LEQ).
    Conflict between rule 54 and token LT resolved as shift (NOT < LT).
    Conflict between rule 54 and token GEQ resolved as shift (NOT < GEQ).
    Conflict between rule 54 and token GT resolved as shift (NOT < GT).
    Conflict between rule 54 and token NEQ resolved as shift (NOT < NEQ).
    Conflict between rule 54 and token EQ resolved as shift (NOT < EQ).
    Conflict between rule 54 and token LSBRACE resolved as shift (NOT < LSBRACE).


state 55

   39 exp: exp . LSBRACE INTLIT RSBRACE
   40    | exp . ADD exp
   41    | exp . SUB exp
   42    | exp . MUL exp
   43    | exp . DIV exp
   44    | exp . POW exp
   45    | exp . MOD exp
   46    | exp . GT exp
   47    | exp . LT exp
   48    | exp . GEQ exp
   49    | exp . LEQ exp
   50    | exp . NEQ exp
   51    | exp . EQ exp
   52    | exp . AND exp
   53    | exp . OR exp
   55    | SUB exp .  [DO, THEN, SEMI, ASSIGN, COMMA, OR, AND, ADD, SUB, MOD, DIV, MUL, POW, RPAR]
   59    | exp . ASSIGN exp

    LSBRACE  shift, and go to state 73

    LEQ  error (nonassociative)
    LT   error (nonassociative)
    GEQ  error (nonassociative)
    GT   error (nonassociative)
    NEQ  error (nonassociative)
    EQ   error (nonassociative)

    $default  reduce using rule 55 (exp)

    Conflict between rule 55 and token ASSIGN resolved as reduce (ASSIGN < NEG).
    Conflict between rule 55 and token OR resolved as reduce (OR < NEG).
    Conflict between rule 55 and token AND resolved as reduce (AND < NEG).
    Conflict between rule 55 and token ADD resolved as reduce (ADD < NEG).
    Conflict between rule 55 and token SUB resolved as reduce (SUB < NEG).
    Conflict between rule 55 and token MOD resolved as reduce (MOD < NEG).
    Conflict between rule 55 and token DIV resolved as reduce (DIV < NEG).
    Conflict between rule 55 and token MUL resolved as reduce (MUL < NEG).
    Conflict between rule 55 and token POW resolved as reduce (POW < NEG).
    Conflict between rule 55 and token LEQ resolved as an error (%nonassoc LEQ).
    Conflict between rule 55 and token LT resolved as an error (%nonassoc LT).
    Conflict between rule 55 and token GEQ resolved as an error (%nonassoc GEQ).
    Conflict between rule 55 and token GT resolved as an error (%nonassoc GT).
    Conflict between rule 55 and token NEQ resolved as an error (%nonassoc NEQ).
    Conflict between rule 55 and token EQ resolved as an error (%nonassoc EQ).
    Conflict between rule 55 and token LSBRACE resolved as shift (NEG < LSBRACE).


state 56

   39 exp: exp . LSBRACE INTLIT RSBRACE
   40    | exp . ADD exp
   41    | exp . SUB exp
   42    | exp . MUL exp
   43    | exp . DIV exp
   44    | exp . POW exp
   45    | exp . MOD exp
   46    | exp . GT exp
   47    | exp . LT exp
   48    | exp . GEQ exp
   49    | exp . LEQ exp
   50    | exp . NEQ exp
   51    | exp . EQ exp
   52    | exp . AND exp
   53    | exp . OR exp
   56    | LPAR exp . RPAR
   59    | exp . ASSIGN exp

    ASSIGN   shift, and go to state 58
    OR       shift, and go to state 59
    AND      shift, and go to state 60
    ADD      shift, and go to state 61
    SUB      shift, and go to state 62
    MOD      shift, and go to state 63
    DIV      shift, and go to state 64
    MUL      shift, and go to state 65
    POW      shift, and go to state 66
    LEQ      shift, and go to state 67
    LT       shift, and go to state 68
    GEQ      shift, and go to state 69
    GT       shift, and go to state 70
    NEQ      shift, and go to state 71
    EQ       shift, and go to state 72
    LSBRACE  shift, and go to state 73
    RPAR     shift, and go to state 87


state 57

    6 decl: ids COLON type ASSIGN exp SEMI .

    $default  reduce using rule 6 (decl)


state 58
